# Hebrew

./: README.md  challenge.py  hebrew_rag_index.index  hebrew_rag_index_meta.pkl  index.html  main.py  parser.py  pyproject.toml  rag_engine.py  requirements.txt  script.js  setup_rag.py  spec_content.txt  style.css
static/: script.js  style.css
